--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-cookie": "^4.0.3",
+    "react-detect-offline": "^2.4.4",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-google-login": "^5.2.2",
